--- a/Theseus/web/css/style.css
+++ b/Theseus/web/css/style.css
@@ -4,12 +4,12 @@ body {
     font-family: Calibri;
 }
 header {
-    height: auto;
+    height: 100%;
     background-color: white;
 }
 #event{
-    height: auto;
-    min-height:500px;
+    height: 100%;
+    min-height: 400px;
 }
 
 /* style DU HEADER */
@@ -131,6 +131,7 @@ footer h3{
         margin:auto;
         width:100%;
         margin-bottom:25px;
+        padding-top:5px;
     }
 }
 
