--- a/Theseus/web/css/style2.css
+++ b/Theseus/web/css/style2.css
@@ -11,18 +11,19 @@
 	text-align: center;
     width:100%;
     margin:auto;
-    height:200px;
+    height:100%;
 }
 
 /* Common style */
 .grid figure {
 	width: 48%;
-	height: 350px;
+
+	height: 100%;
 	position: relative;
 	float: left;
 	overflow: hidden;
 	margin: 10px 1px;
-	min-width: 320px;
+	min-width: 275px;
 	max-width: 480px;
 	max-height: 360px;
 	background: #3085a3;
@@ -33,7 +34,6 @@
 .grid figure img {
 	position: relative;
 	display: block;
-	min-height: 100%;
 	max-width: 100%;
 	opacity: 0.8;
 }
@@ -142,7 +142,7 @@ figure.effect-goliath:hover p {
 }
 
 /* Media queries */
-@media screen and (max-width: 70em) {
+@media screen and (max-width: 60em) {
 	.content {
 		padding: 0 10px;
 		text-align: center;
@@ -213,4 +213,11 @@ figure.effect-goliath:hover p {
 	text-decoration: none;
 	display: block;
 	color: #222;
+}
+@media (max-width: 767px) {
+    /* CSS appliqué aux petits écrans */
+	.text-content {
+		display: none;
+
+	}
 }
