--- a/Theseus/web/css/style.css
+++ b/Theseus/web/css/style.css
@@ -268,3 +268,23 @@ figure.effect-goliath:hover ~ h3{
     height: 90px;
     width: 90px;
 }
+
+#events-content{
+    text-align: center;
+}
+
+#events-content .jumbotron{
+    width: 80%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 15px 0;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+}
+
+.jumbotron img{
+    height: 50px;
+    width: 80px;
+}
