--- a/Theseus/web/css/style.css
+++ b/Theseus/web/css/style.css
@@ -9,7 +9,8 @@ header {
 }
 #event{
     height: 100%;
-    min-height: 500px;
+    min-height: 480px;
+    padding-left: 20px;
 }
 
 /* style DU HEADER */
