--- a/Theseus/web/css/style2.css
+++ b/Theseus/web/css/style2.css
@@ -22,7 +22,7 @@
 	float: left;
 	overflow: hidden;
 	margin: 10px 1px;
-	max-height: 480px;
+	max-height: 450px;
 	background: #3085a3;
 	cursor: pointer;
 	text-align: center;
@@ -52,8 +52,7 @@
 .grid figure figcaption,
 .grid figure figcaption > a {
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: 320px;
 	width: 100%;
 	height: 100%;
 }
@@ -123,13 +122,8 @@ figure.effect-goliath p {
 }
 
 figure.effect-goliath:hover img {
-	-webkit-transform: translate3d(0,-80px,0);
-	transform: translate3d(0,-80px,0);
-}
-
-figure.effect-goliath:hover h2 {
-	-webkit-transform: translate3d(0,-100px,0);
-	transform: translate3d(0,-100px,0);
+	-webkit-transform: translate3d(0,-60px,0);
+	transform: translate3d(0,-50px,0);
 }
 
 figure.effect-goliath:hover p {
@@ -147,8 +141,11 @@ figure.effect-goliath:hover p {
 	.grid figure {
 		display: inline-block;
 		float: none;
-		margin: 10px auto;
+		margin: auto;
 		width: 40%;
+	}
+	.grid figure figcaption {
+		top: 270px;
 	}
 }
 @media screen and (max-width: 700px) {
@@ -160,8 +157,11 @@ figure.effect-goliath:hover p {
 		display: inline-block;
 		float: none;
 		min-width: 275px;
-		margin: 10px auto;
+		margin: auto;
 		width: 50%;
+	}
+	.grid figure figcaption {
+		top: 250px;
 	}
 }
 
