--- a/Theseus/web/css/style2.css
+++ b/Theseus/web/css/style2.css
@@ -174,6 +174,7 @@ figure.effect-goliath:hover p {
 
 .news-slider {
 	/* Style the actual content */
+	position: relative;
 }
 .news-slider .text-content {
 	position: absolute;
@@ -204,6 +205,10 @@ figure.effect-goliath:hover p {
 	max-width: 100%;
 }
 .news-slider .news-pager {
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+	z-index: 35;
 	text-align: right;
 	display: block;
 	margin: 0.2em 0 0;
@@ -214,15 +219,21 @@ figure.effect-goliath:hover p {
 	display: inline-block;
 	padding: 0.6em;
 	margin: 0 0 0 1em;
+	background-color: #DDD;
+	width: 18px;
+	height: 18px;
+	margin-right: 8px;
+	text-indent: -1000px;
+	font-size: 0;
+	border-radius: 90px;
 }
-.news-slider .news-pager li.sy-active a {
-	color: #31ace2;
+.news-slider .news-pager li.sy-active {
+	background-color: #333;
 }
 .news-slider .news-pager li a {
-	font-weight: 500;
-	text-decoration: none;
 	display: block;
-	color: #222;
+	width: 100%;
+	height: 100%;
 }
 @media (max-width: 850px) {
     /* CSS appliqué aux petits écrans */
