--- a/Theseus/web/css/style2.css
+++ b/Theseus/web/css/style2.css
@@ -30,16 +30,16 @@
 
 .grid figure img {
 	position: relative;
-	display: block;
 	max-width: 100%;
 	opacity: 0.8;
 }
 
 .grid figure figcaption {
-	padding: 2em;
+	/*padding: 2em;*/
 	color: #fff;
 	text-transform: uppercase;
 	font-size: 1.25em;
+	text-align: center;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
@@ -48,23 +48,10 @@
 .grid figure figcaption::after {
 	pointer-events: none;
 }
-
-.grid figure figcaption,
-.grid figure figcaption > a {
+.grid figure figcaption {
 	position: absolute;
-	top: 320px;
+	top: 480px;
 	width: 100%;
-	height: 100%;
-}
-
-/* Anchor will cover the whole item by default */
-/* For some effects it will show as a button */
-.grid figure figcaption > a {
-	z-index: 1000;
-	text-indent: 200%;
-	white-space: nowrap;
-	font-size: 0;
-	opacity: 0;
 }
 
 .grid figure h2 {
@@ -113,12 +100,7 @@ figure.effect-goliath p {
 
 figure.effect-goliath p {
 	text-transform: none;
-	font-size: 90%;
-	opacity: 0;
-	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	transition: opacity 0.35s, transform 0.35s;
-	-webkit-transform: translate3d(0,50px,0);
-	transform: translate3d(0,50px,0);
+	text-align: center;
 }
 
 figure.effect-goliath:hover img {
@@ -126,10 +108,12 @@ figure.effect-goliath:hover img {
 	transform: translate3d(0,-50px,0);
 }
 
-figure.effect-goliath:hover p {
+figure.effect-goliath:hover figcaption {
 	opacity: 1;
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: translate3d(0,-70px,0);
+	transform: translate3d(0,-70px,0);
 }
 
 /* Media queries */
@@ -145,7 +129,7 @@ figure.effect-goliath:hover p {
 		width: 40%;
 	}
 	.grid figure figcaption {
-		top: 270px;
+		top: 300px;
 	}
 }
 @media screen and (max-width: 700px) {
@@ -161,7 +145,14 @@ figure.effect-goliath:hover p {
 		width: 50%;
 	}
 	.grid figure figcaption {
-		top: 250px;
+		top: 315px;
+	}
+	figure.effect-goliath:hover figcaption {
+		opacity: 1;
+		-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+		transition: opacity 0.35s, transform 0.35s;
+		-webkit-transform: translate3d(0,-50px,0);
+		transform: translate3d(0,-50px,0);
 	}
 }
 
