--- a/Theseus/web/css/style.css
+++ b/Theseus/web/css/style.css
@@ -197,14 +197,41 @@ figure.effect-goliath:hover ~ h3{
     margin: 0px;
 }
 
-@media (max-width: 768px) {
-    .navbar-custom .navbar-brand {
-        visibility: hidden;
-        width: 0px;
-        height: 0px;
-        position: absolute;
+@media (max-width:870px) {
+    .navbar-header {
+        float: none;
     }
-
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
     .navbar-title {
         float: left;
         height: 50px;
@@ -213,8 +240,44 @@ figure.effect-goliath:hover ~ h3{
         line-height: 20px;
         color: #ffffff;
     }
+    .navbar-custom .navbar-brand {
+        visibility: hidden;
+        width: 0px;
+        height: 0px;
+        position: absolute;
+    }
+    .navbar-custom .navbar-nav .open .dropdown-menu > li > a {
+        color: #ffffff;
+    }
+    .navbar-custom .navbar-nav .open .dropdown-menu > li > a:hover,
+    .navbar-custom .navbar-nav .open .dropdown-menu > li > a:focus {
+        color: #ffffff;
+        background-color: transparent;
+    }
+    .navbar-custom .navbar-nav .open .dropdown-menu > .active > a,
+    .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:hover,
+    .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:focus {
+        color: #ffffff;
+        background-color: #0097de;
+    }
+    .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a,
+    .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a:hover,
+    .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a:focus {
+        color: #cccccc;
+        background-color: transparent;
+    }
+    div.input-group {
+        width: 100%;
+    }
+    span.input-group-btn {
+        width: 15px !important;
+    }
+    button.navbar-toggle.navbar-collapse {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
 }
-@media (min-width: 768px) {
+@media (min-width: 870px) {
     .navbar-custom .navbar-brand {
         padding: 0px;
         color: #ffffff;
@@ -224,6 +287,10 @@ figure.effect-goliath:hover ~ h3{
         visibility: hidden;
         position: absolute;
         width: 0px;
+    }
+    .navbar-right {
+        float: right!important;
+        margin-right: 0px;
     }
 }
 .navbar-custom .navbar-brand:hover,
@@ -295,34 +362,6 @@ figure.effect-goliath:hover ~ h3{
 .navbar-custom .navbar-nav > .dropdown > a .caret {
   border-top-color: #ffffff;
   border-bottom-color: #ffffff;
-}
-@media (min-width: 768px) {
-    .navbar-right {
-        float: right!important;
-        margin-right: 0px;
-    }
-}
-@media (max-width: 767px) {
-  .navbar-custom .navbar-nav .open .dropdown-menu > li > a {
-    color: #ffffff;
-  }
-  .navbar-custom .navbar-nav .open .dropdown-menu > li > a:hover,
-  .navbar-custom .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #ffffff;
-    background-color: transparent;
-  }
-  .navbar-custom .navbar-nav .open .dropdown-menu > .active > a,
-  .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:hover,
-  .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #ffffff;
-    background-color: #0097de;
-  }
-  .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a,
-  .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a:hover,
-  .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a:focus {
-    color: #cccccc;
-    background-color: transparent;
-  }
 }
 .navbar-custom .navbar-link {
   color: #ffffff;
