--- a/Theseus/web/css/style.css
+++ b/Theseus/web/css/style.css
@@ -1,3 +1,7 @@
+*{
+    outline:none !important;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -384,14 +388,15 @@ figure.effect-goliath:hover ~ h3{
 }
 
 #events-content .jumbotron{
-    width: 60%;
+    /*width: 60%;*/
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    padding: 15px 0;
+    /*padding: 15px 0;*/
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
+    height: 400px;
 }
 
 .jumbotron img{
@@ -499,4 +504,114 @@ figure.effect-goliath:hover ~ h3{
 #productfilter {
     float: right;
     margin-right: 20px;
+}
+
+.jumbotron.outdated .alert{
+    background-color:red;
+}
+
+.jumbotron.outdated .alert a{
+    color:white;
+}
+
+.clear{
+    clear: both;
+    font-size: 0;
+}
+
+.modal-event p{
+    text-align: left;
+    font-size: 14px;
+    padding: 20px 20px;
+}
+
+.modal-event p span{
+    padding-bottom: 10px;
+}
+
+.bloc-event{
+    float:left;
+    width:100%;
+    color: black;
+    text-decoration: none;
+    border: 1px solid #CCC;
+    margin-bottom: 20px;
+    font-family: "Helvetica Neue", "Arial", sans-serif;
+}
+
+.bloc-event:hover{
+    color:black;
+    text-decoration: none;
+}
+
+.bloc-event h3{
+    float:left;
+    width:100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 0px;
+    background-color: #0096db;
+    color: white;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+.bloc-event .img{
+    float:left;
+    width: 100%;
+    height: 180px;
+    background-position:center center;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+}
+
+.bloc-event .infos{
+    float:left;
+    width: 100%;
+    border-top:1px solid #CCC;
+}
+
+.bloc-event .infos p{
+    float: left;
+    width: 60%;
+    margin-right:5%;
+    margin-bottom: 0px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.bloc-event .infos p span{
+    float: left;
+    width:100%;
+    text-align: left;
+    font-size: 12px;
+    padding-left: 10px;
+}
+
+.bloc-event:hover .infos p,
+.bloc-event:hover .infos p span{
+    color:black;
+}
+
+.bloc-event .infos button,
+.bloc-event .event-done{
+    float: left;
+    width: 35%;
+    height:100%;
+    padding: 10px;
+    border-radius: 0px;
+    font-size: 12px;
+    color: white;
+    text-transform: uppercase;
+    background-color: cornflowerblue;
+    border: none;
+}
+
+.bloc-event .event-done{
+    background-color: red;
+}
+
+.bloc-event .infos button:hover,
+.bloc-event:hover button{
+    opacity: 0.8;
 }
