--- a/Theseus/web/css/style.css
+++ b/Theseus/web/css/style.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Calibri;
+    min-width: 400px;
 }
 
 header {
@@ -58,6 +59,10 @@ header {
 /* style DU HEADER */
 #header_slogan a {
     text-decoration: none;
+}
+
+#header_block fieldset{
+    min-width: 120px;
 }
 
 header section{
