--- a/Theseus/web/css/style.css
+++ b/Theseus/web/css/style.css
@@ -684,3 +684,7 @@ figure.effect-goliath:hover ~ h3{
     background-color: #337ab7;
     border-color: #337ab7;
 }
+
+.forgotPasswordLink {
+    font-size: x-small;
+}
