--- a/Theseus/web/template/mail/MailInvitation.html
+++ b/Theseus/web/template/mail/MailInvitation.html
@@ -153,7 +153,7 @@
 									<td width="200" valign="top" align="center">
 										<div class="contentEditableContainer contentImageEditable">
 											<div class="contentEditable" align='center' >
-												<img src="img/others/logoTheseus.png" width="275" height="160"  alt='Logo'  data-default="placeholder" />
+												<img src="../../img/others/logoTheseus.png" width="275" height="160"  alt='Logo'  data-default="placeholder" />
 											</div>
 										</div>
 									</td>
@@ -203,7 +203,7 @@
 										<u>Date et lieu :</u> <strong>Samedi 10 Octobre 2015 - Le Yoyo Palais de Tokyo</strong><br />
 										<u>Adresse  :</u> <strong>Le Yoyo Palais de Tokyo <br /> 13 Avenue du Président Wilson 75016 Paris</strong></p>
 										<div class="contentEditable" align='center' >
-											<img src="img/others/MapMiniature.png" width="380" height="180"  alt='Logo'  data-default="placeholder" />
+											<img src="../../img/others/MapMiniature.png" width="380" height="180"  alt='Logo'  data-default="placeholder" />
 										</div>
 									</div>
 									
@@ -254,14 +254,14 @@
 												<td valign="top" width='34'>
 													<div class="contentEditableContainer contentFacebookEditable" style='display:inline;'>
 														<div class="contentEditable" >
-															<img src="img/others/facebook.png" data-default="placeholder" data-max-width='30' data-customIcon="true" width='30' height='30' alt='facebook' style='margin-right:40x;'>
+															<img src="../../img/others/facebook.png" data-default="placeholder" data-max-width='30' data-customIcon="true" width='30' height='30' alt='facebook' style='margin-right:40x;'>
 														</div>
 													</div>
 												</td>
 												<td valign="top" width='34'>
 													<div class="contentEditableContainer contentTwitterEditable" style='display:inline;'>
 													  <div class="contentEditable" >
-														<img src="img/others/twitter.png" data-default="placeholder" data-max-width='30' data-customIcon="true" width='30' height='30' alt='twitter' style='margin-right:40x;'>
+														<img src="../../img/others/twitter.png" data-default="placeholder" data-max-width='30' data-customIcon="true" width='30' height='30' alt='twitter' style='margin-right:40x;'>
 													  </div>
 													</div>
 												</td>
