--- a/Theseus/web/template/mail/MailNewsletter.html
+++ b/Theseus/web/template/mail/MailNewsletter.html
@@ -22,7 +22,7 @@
                     <h1 style="font-size:22px; color:#22baba;margin-left:40px; margin-top:26px;">Newsletter Theseus #1 <br /> Septembre 2015</h1>
                 </td>
                 <td valign="top">
-                    <p style="color:#aeaeae; font-size:11px; margin-top:00px;"><img src="img/logo2.png" width="115" height="75" /></p>
+                    <p style="color:#aeaeae; font-size:11px; margin-top:00px;"><img src="../../img/logo2.png" width="115" height="75" /></p>
                 </td>
             </tr>
             </table>
@@ -32,7 +32,7 @@
             <table cellpadding="0" cellspacing="0" width="580" background="http://webdesignweb.fr/sources/email-html/img/1px.png" style="padding:0px 0px 0px 0px;">
             <tr>
                 <td>
-                    <a href="#" target="_blank"><img src="img/others/news-alertes.png" width="500" height="365" style="border:none;margin-left:60px;" /></a>
+                    <a href="#" target="_blank"><img src="../../img/others/news-alertes.png" width="500" height="365" style="border:none;margin-left:60px;" /></a>
                 </td>
             </tr>
             </table>
@@ -45,7 +45,7 @@
                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The poin t of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors.</p>
                 </td>
                 <td>
-                    <a href="#" target="_blank"><img src="img/others/essai3.png" width="230" height="162" style="border:none;margin-left:0px;margin-right: 10px" /></a>
+                    <a href="#" target="_blank"><img src="../../img/others/essai3.png" width="230" height="162" style="border:none;margin-left:0px;margin-right: 10px" /></a>
                 </td>
             </tr>
             </table>
@@ -55,7 +55,7 @@
             <table cellpadding="0" cellspacing="0" width="580" background="http://webdesignweb.fr/sources/email-html/img/1px.png" style="padding:30px 0px 40px 0px;">
             <tr>
                 <td>
-                    <a href="#" target="_blank"><img src="img/others/proteus.jpg" width="208" height="219" style="border:none;margin-left:70px;" /></a>
+                    <a href="#" target="_blank"><img src="../../img/others/proteus.jpg" width="208" height="219" style="border:none;margin-left:70px;" /></a>
                 </td>
                 <td valign="top" style="color:#808080; font-size:11px; padding:0px 18px 0px 19px; text-align:justify; line-height:25px;">
                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The poin t of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors. The poin t of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
