--- a/Theseus/web/css/style.css
+++ b/Theseus/web/css/style.css
@@ -19,6 +19,11 @@ header {
     padding-left: 20px;
 }
 
+#event div > figure > a {
+    text-decoration: none;
+    color: black;
+}
+
 @media (max-width: 550px) {
     #header_slogan{
         visibility: hidden;
@@ -219,7 +224,7 @@ figure.effect-goliath:hover ~ h3{
     margin: 0px;
 }
 
-@media (max-width:870px) {
+@media (max-width:872px) {
     .navbar-header {
         float: none;
     }
@@ -262,6 +267,7 @@ figure.effect-goliath:hover ~ h3{
         line-height: 20px;
         color: #ffffff;
     }
+
     .navbar-custom .navbar-brand {
         visibility: hidden;
         width: 0px;
@@ -299,7 +305,7 @@ figure.effect-goliath:hover ~ h3{
         padding-right: 5px;
     }
 }
-@media (min-width: 870px) {
+@media (min-width: 873px) {
     .navbar-custom .navbar-brand {
         padding: 0px;
         color: #ffffff;
@@ -363,6 +369,8 @@ figure.effect-goliath:hover ~ h3{
 .navbar-custom .navbar-form {
   border-color: #00aeff;
   box-shadow: none;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 .navbar-custom .navbar-nav > .dropdown > a:hover .caret,
 .navbar-custom .navbar-nav > .dropdown > a:focus .caret {
@@ -480,21 +488,22 @@ figure.effect-goliath:hover ~ h3{
     }
 }
 
-#tableproduct article > div > a {
+#tableproduct article > div > div > a {
     height:50%;
 }
 
-#tableproduct article > div > a > img{
+#tableproduct article > div > div > a > img{
     font-size: 12px;
     width: 40%;
-    max-height:  240px;
+    max-height:  50%;
+    min-height: 40%;
 }
 
-#tableproduct article > div > a > p{
+#tableproduct article > div > div > a > p{
     font-size: 12px;
 }
 
-#tableproduct article > div > h5{
+#tableproduct article > div > div > h5{
     text-align: left;
     margin-left: 15px;
     color: #337ab7;
