--- a/Theseus/web/css/style2.css
+++ b/Theseus/web/css/style2.css
@@ -233,3 +233,9 @@ figure.effect-goliath:hover figcaption {
 
 	}
 }
+
+@media (max-width: 960px) and (min-width: 610px) {
+	#event figcaption {
+		display: none;
+	}
+}
