* Ajout de la pagination sur la page produit : - motif du contrôleur produit (ajout fonction getProduitsPagination) - motif de la page produit.php - modif de style.css

--- a/Theseus/web/css/style.css
+++ b/Theseus/web/css/style.css
@@ -697,3 +697,7 @@ figure.effect-goliath:hover ~ h3{
 .forgotPasswordLink {
     font-size: x-small;
 }
+
+.paginationProduct{
+    text-align: center;
+}
