Modif "Mon compte"
- Ajout avantages prenium + css qui va avec

--- a/Theseus/web/css/style.css
+++ b/Theseus/web/css/style.css
@@ -715,3 +715,23 @@ figure.effect-goliath:hover ~ h3{
 #dropConnexion > div > div:nth-child(5) > span {
     display: block;
 }
+
+.cardAbo {
+    background-color: #f5f5f5;
+    height: 200px;
+    margin: 5px;
+    width: 31.9%;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 100px;
+    display: block;
+    color: black;
+    font-size: large;
+}
+
+.cardAbo span {
+    font-size: 30px;
+}
+#subscribe {
+    background-color: #f5dc04;
+}
