--- a/Theseus/web/css/style.css
+++ b/Theseus/web/css/style.css
@@ -719,8 +719,9 @@ figure.effect-goliath:hover ~ h3{
 .cardAbo {
     background-color: #f5f5f5;
     height: 200px;
-    margin: 5px;
-    width: 31.9%;
+    margin-left: 5px;
+    margin-bottom: 5px;
+    width: 32.5%;
     text-align: center;
     vertical-align: middle;
     line-height: 100px;
