--- a/Theseus/web/css/style.css
+++ b/Theseus/web/css/style.css
@@ -792,3 +792,7 @@ figure.effect-goliath:hover ~ h3{
     padding-top: 35px;
     padding-bottom: 35px;
 }
+
+#myAccount-content {
+    width: 100%;
+}
