--- a/Theseus/web/css/style.css
+++ b/Theseus/web/css/style.css
@@ -16,7 +16,6 @@ header {
 #event{
     height: 100%;
     min-height: 480px;
-    padding-left: 20px;
 }
 
 #event div > figure > a {
@@ -720,9 +719,8 @@ figure.effect-goliath:hover ~ h3{
 .cardAbo {
     background-color: #f5f5f5;
     height: 200px;
-    margin-left: 5px;
-    margin-bottom: 5px;
-    width: 32.5%;
+    margin-left: 3px;
+    margin-bottom: 3px;
     text-align: center;
     vertical-align: middle;
     line-height: 100px;
@@ -733,6 +731,9 @@ figure.effect-goliath:hover ~ h3{
 
 .cardAbo span {
     font-size: 30px;
+}
+.cardAbo h4 {
+    margin-top: 0px;
 }
 #subscribe {
     background-color: #f5dc04;
@@ -769,6 +770,10 @@ figure.effect-goliath:hover ~ h3{
 }
 
 #connexion h2 {
+    margin-top: 0px;
+}
+
+#logged h2 {
     margin-top: 0px;
 }
 
@@ -818,4 +823,43 @@ figure.effect-goliath:hover ~ h3{
     font-size: 15px;
     margin-left: 3px;
     line-height: 15px;
+}
+
+.uk-notify.uk-notify-top-center {
+    text-align: center;
+}
+
+.uk-notify-message.uk-notify-message-success {
+    background-color: #39b32d;
+    color: white;
+}
+
+.uk-notify-message.uk-notify-message-danger {
+    background-color: #c82500;
+    color: white;
+}
+
+.uk-close {
+    color: white;
+}
+.uk-lightbox-content {
+    z-index: 100;
+}
+
+@media (max-width: 767px) {
+    #aboPrenium .col-xs-12 {
+        width: 99%;
+    }
+}
+
+@media (min-width: 992px) {
+    #aboPrenium .col-md-4 {
+        width: 33%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    #aboPrenium .col-sm-6 {
+        width: 49.3%;
+    }
 }
