fix forgot pwd + envoie mail

--- a/Theseus/web/template/mail/forgotPasswordMail.html
+++ b/Theseus/web/template/mail/forgotPasswordMail.html
@@ -103,10 +103,10 @@ td.middle{
 </script>
 
 </head>
-<body paddingwidth="0" paddingheight="0" bgcolor="#d1d3d4"  style="padding-top: 0; padding-bottom: 0; padding-top: 0; padding-bottom: 0; background-repeat: repeat; width: 100% !important; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; -webkit-font-smoothing: antialiased;" offset="0" toppadding="0" leftpadding="0">
-  <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tableContent" align="center" bgcolor="#EAEAEA" style='font-family:helvetica, sans-serif;'>
+<body paddingwidth="0" paddingheight="0" style="  margin: auto; padding-top: 0; padding-bottom: 0; padding-top: 0; padding-bottom: 0; background-repeat: repeat; width: 600px; !important; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; -webkit-font-smoothing: antialiased;" offset="0" toppadding="0" leftpadding="0">
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tableContent" align="center" style='font-family:helvetica, sans-serif;'>
     <!-- ================ header=============== -->
-    <tr><td height='20' bgcolor='#EAEAEA'></td></tr>
+    <tr><td height='20' ></td></tr>
     <tr>
 
       <td align='center' class='bgBody'>
@@ -128,7 +128,7 @@ td.middle{
                             <td align='left'>
                               <div class="contentEditableContainer contentImageEditable">
                                 <div class="contentEditable" >
-                                  <img src="../../img/others/logoTheseus.png" style="height: 125px; width: 190px;" alt='Logo Theseus'>
+                                  <img src="https://lh3.googleusercontent.com/ykEO3-fli_oRMAK7Bnm7N69IEmjr5kPCAbd3iDvJ2BcvPjsU51ExQGdBUZ24yPiMapJWt824lc1ito7pY2qTdBTy37_tmaXe2Fr9tlYc3jazNu-GbZeg8SU7bUJ_NNIXT-LFxEPAHxqP2W1vEKQg8D92Gu6ZSCfI-7Aw8ddi-V3uTF5wjG_ITXqYAbHs3QrywFuH1wn-DiI0Lnhr91VWWGT_8fbiYNVZG20pz_weKFXdHdn8HWNJGqS6dSKImXSMrnsemD0GoqwjyNAq-Q9UjpAn_mNNaXp3CyVtZ4TS4zWk7fli59QXCj3TsAAVGEvnr3gSZ2CkwGsiSUz4JTgAMwI11Y1C1V6BEoN2jnFghxBxrq1L9xpMni4p5hWgvHf2wM_bIxUdAnpNEBAfdjlO_H7o6XPPcsYWCzZn1-oxaIwDKXJdGtRrrePUdKv3cmeAe8A2w2AEsjNYMstQ3juMcm7jDm5OlSUeOU5dR649j-U6h44ZNL_JE66ITdOB5fuTli7qUzqzyJ-LYJ_wETXGwly3wG1XKl4ksua08OjRng=w1292-h738-no" style="height: 125px; width: 190px;" alt='Logo Theseus'>
                                 </div>
                               </div>
                             </td>
@@ -154,7 +154,7 @@ td.middle{
                             <td width='365'>
                               <div class="contentEditableContainer contentImageEditable">
                                 <div class="contentEditable" >
-                                  <img src="../../img/others/password.png" data-default="placeholder" data-max-width="365" width='365' height='210' alt=''>
+                                  <img src="https://lh3.googleusercontent.com/MLvv9HU_2SLTRNEQoUkwGEaQn2D-bIxg3UdphHzHP8D9_Xqcjao-etnvm4rt0ygRYhMD4paYLN039OY2rdSOrSwFSnDoaaF5uvPjSV3QAh1tC6zafqL2oEJ9l95oXCoMv-iNMGzYKbRCtGC53rqtVjf0asEkRTFFLjy6LpCKLYIS_tDLmygGXivBjf7nUbx7PmeiYUFpN_-6SZojFw0Q0NtalVeP9DP8JEG6kgWZgkdffAUEJY_6xfmddmfX_DzL55ibC6vMCGuguF_B_YzZ6S3muk2nHANqiwitKSzgHFfe7RUQX42XRU1rLowkOjl4h4ykzc-L4EMal2RzjBwluX7YcNeggX6mfpNyGxnxRNqmKqAtb4rK0tEPo6G8S3UIsW7qX81-vaLDbtH3lKOoMpNAr-zEQKNux6E6cqDU7zMES87dOAyuVbm3mCJvU0aoaaqyCLRjXLEc8CKYVYVxdoiYtSxeqG9y73FqpBjXhpDf0DadQR6hP6gXWpLhhL2zAMDF054PpRIh6LWOwBIRzz47j3mxiEUsdIaBt2DLpQ=w300-h225-no" data-default="placeholder" data-max-width="365" width='365' height='210' alt=''>
                                 </div>
                               </div>
                             </td>
@@ -224,7 +224,7 @@ td.middle{
                                 <td width='39'>
                                   <div class="contentEditableContainer contentFacebookEditable">
                                     <div class="contentEditable" >
-                                      <img src="../../img/others/facebook.png" data-default="placeholder" data-max-width="39" width='39' height='39' alt='facebook' data-customIcon="true">
+                                      <img src="https://lh3.googleusercontent.com/yEhjwRpOTKs0fn3Bd7w3j8r-Rb84CLhu5bVlMorZW_SjotSABm5eegdSMznpyt28Ak09VZmFYD1tltgDhw585kkYHAOn0-LyNM3X276a4Jvydir3B13i5vGtDAbIi8AbVNDEiduMjl--AXe_MTnUcpdtdmn4x08rtIA9SUg4CizZwEAqvdtE_b8QBRv3Vxe6m_OVUg26_dCXWqHbstit8gAuF6cKcfcXqBOpBrhY_LjKQx7ngPvVgYsgNUPH50wAOTSwudi2AYx8Is3Yjy-zSOWfA52A7OQS5sNNTXkdbgJjmFdCwO4jcxjgY453ldjPSSnHx7uW1q0N8Ha4yNvUU9twLfcoko2RIuEuo380sHhki5PXoGd9ASpySD5Q0kKYYj4RW7hXO1Cko6IG5N_aeW4dJYanV1MLL2CRv0Rwa7PmIFqo0YE6nDF6j6pu6LOZROvwYaDqRdVTqk8eLt_ocV0o3ZJNrlMKnmOkTjq88Saae6g7ZvJ0k6SNeNsNKVQB1NkvIoZv6QFtaahuuWDm22RWVDu7IXlTIfihU0ZI6g=s82-no" data-default="placeholder" data-max-width="39" width='39' height='39' alt='facebook' data-customIcon="true">
                                     </div>
                                   </div>
                                 </td>
@@ -232,7 +232,7 @@ td.middle{
                                 <td width='39'>
                                   <div class="contentEditableContainer contentTwitterEditable">
                                     <div class="contentEditable" >
-                                      <img src="../../img/others/twitter.png" data-default="placeholder" data-max-width="39" width='39' height='39' alt='twitter' data-customIcon="true">
+                                      <img src="https://lh3.googleusercontent.com/QYoY0CRIFU961J3qFPmjzu6IMgTZ9XB9nPv91iqsBYnq9vdjDniJ_34GZo1P_r2O4XeikYHbUw0QQQ7_cnHH7LLPNRUOnrRhdt3X2JzB_8Y5s8jEcKbOJyTUy6o7MNiAxrbw-CHnyATEvLaaf88LHMlQqyCygg7yV_JIUWnOI9QkwblHDMhc__4E8ShRsdeJcAWrfC8F_1wlm-ifcf9RBjrjd3bP5UQEKD5H4ELLhrHY5w_O1bxpTGKK11KEgt0sE-xtqAtS3m9nL1qLBOU7g0yUDy9he7x44y9d3j2UKaFTo3WbRJCNndZhWSjxve2EJY9owVSxDWKG70UgtIZNRWQTgp2b1Cch4S2QE08nlpI23krlHDb2Ow-lSAl-iJQhciu_0q3srq9R_YZmt9Dohm5EFIRNhI6pljc4LaZQTDfqdzVGg4RtyYIw0-N1Pn8NjoQObUhgZOIgDGEWxKFMKHi9hH7QwhJ8Bp8aGeF43pwuQSIzizmypv3MPEJkFDqfadfzFqOAyJALW6ypzDJFbKcNTPE0UWUKlRzqiARPSg=s82-no" data-default="placeholder" data-max-width="39" width='39' height='39' alt='twitter' data-customIcon="true">
                                     </div>
                                   </div>
                                 </td>
