documentation du code
clean code avec phpmd

--- a/Theseus/web/template/mail/forgotPasswordMail.html
+++ b/Theseus/web/template/mail/forgotPasswordMail.html
@@ -7,8 +7,6 @@
   body {
    padding-top: 0 !important;
    padding-bottom: 0 !important;
-   padding-top: 0 !important;
-   padding-bottom: 0 !important;
    margin:0 !important;
    width: 100% !important;
    -webkit-text-size-adjust: 100% !important;
@@ -103,7 +101,7 @@ td.middle{
 </script>
 
 </head>
-<body paddingwidth="0" paddingheight="0" style="  margin: auto; padding-top: 0; padding-bottom: 0; padding-top: 0; padding-bottom: 0; background-repeat: repeat; width: 600px; !important; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; -webkit-font-smoothing: antialiased;" offset="0" toppadding="0" leftpadding="0">
+<body paddingwidth="0" paddingheight="0" style="  margin: auto; padding-top: 0; padding-bottom: 0; background-repeat: repeat; width: 600px; !important; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; -webkit-font-smoothing: antialiased;" offset="0" toppadding="0" leftpadding="0">
   <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tableContent" align="center" style='font-family:helvetica, sans-serif;'>
     <!-- ================ header=============== -->
     <tr><td height='20' ></td></tr>
@@ -183,7 +181,7 @@ td.middle{
 												- Mot de passe : <strong>[password]</strong>
 												<br />
 												<br />
-												<p>A bientôt sur <a href="http://localhost/Theseus/Theseus/web/index.php" style="color: #555555;text-decoration: none;">notre site !</p>
+												<p>A bientôt sur <a href="http://localhost/Theseus/Theseus/web/index.php" style="color: #555555;text-decoration: none;">notre site !</a></p>
 												<br />
 												<p>Theseus</a> - Le Service inscription</p>
 										</div>
@@ -217,7 +215,7 @@ td.middle{
 										<span style="font-size:11px;color:#555;font-family:Helvetica, Arial, sans-serif;line-height:200%;">THESEUS | 0800.258.369</span>
 										<br/>
 										<br/>
-										<span style="font-size:13px;color:#181818;font-family:Helvetica, Arial, sans-serif;line-height:200%;">
+										<span style="font-size:13px;color:#181818;font-family:Helvetica, Arial, sans-serif;line-height:200%;"></span>
                                     </div>
                                   </div>
                                 </td>
@@ -243,6 +241,6 @@ td.middle{
                         </tr>
                       </table>
                     </div>
-
+                </table>
   </body>
   </html>
