--- a/Theseus/web/template/mail/invitationEventMail.html
+++ b/Theseus/web/template/mail/invitationEventMail.html
@@ -103,7 +103,7 @@
 			text-decoration:none;
 			font-family:Helvetica, Arial, sans-serif;
 			font-size:16px;
-			color:#fff;border-radius:4px;
+			border-radius:4px;
 		}
 		p{
 			color:#555;
@@ -243,11 +243,11 @@
 												<span style="font-size:11px;color:#555;font-family:Helvetica, Arial, sans-serif;line-height:200%;">THESEUS | 0800.258.369</span>
 												<br/>
 												<br/>
-												<span style="font-size:13px;color:#181818;font-family:Helvetica, Arial, sans-serif;line-height:200%;">
+												<span style="font-size:13px;color:#181818;font-family:Helvetica, Arial, sans-serif;line-height:200%;"></span>
 											</div>
 										</div>
 									</td>
-									<td width="40%" height="70" align="right" valign="top" align='right' style="padding-bottom:20px;">
+									<td width="40%" height="70" align="right" valign="top" style="padding-bottom:20px;">
 										<table width="100%" border="0" cellspacing="0" cellpadding="0" align='right'>
 											<tr>
 												<td width='57%'></td>
@@ -278,9 +278,9 @@
 				</tr>
 			</table>
 
-			
-			
 
+
+		</div>
 		</td></tr></table>
 		
 			</td>
