--- a/Theseus/web/template/mail/newsletterMail.html
+++ b/Theseus/web/template/mail/newsletterMail.html
@@ -11,7 +11,7 @@
             <table>
                 <tr>
                     <td>
-                        <span style="font-size:10px; color:#000;">Si cet email ne s'affiche pas correctement, <a href="http://webdesignweb.fr/sources/email-html/index.html" target="_blank" style="font-size:10px; color:#22baba;">cliquez-ici</span>
+                        <span style="font-size:10px; color:#000;">Si cet email ne s'affiche pas correctement, <a href="http://webdesignweb.fr/sources/email-html/index.html" target="_blank" style="font-size:10px; color:#22baba;">cliquez-ici</a></span>
                     </td>
                 </tr>
             </table>
@@ -66,7 +66,7 @@
              
              
             <!-- début footer -->
-            <table style="width:580px; height:148px;" width="580" cellpadding="0" cellspacing="0" background="http://webdesignweb.fr/sources/email-html/img/bas.jpg" style="padding:0px 0px 0px 0px;">
+            <table style="width:580px; height:148px; padding:0px 0px 0px 0px;" width="580" cellpadding="0" cellspacing="0" background="http://webdesignweb.fr/sources/email-html/img/bas.jpg">
             <tr>
                 <td>
                     <a href="http://localhost/Theseus/Theseus/web/index.php" target="_blank" style="margin-left: 107px;border:none;"><img src="http://webdesignweb.fr/sources/email-html/img/rond.jpg" style="border:none" width="132" height="131" /></a>
@@ -78,6 +78,6 @@
             </tr>
             </table>
             <!-- fin du footer -->
-         
+</table>
 </body>
 </html>
